sumo/tests/od2trips/errors/false_options/missing_input/errors.od2trips
Error: No input specified.
Quitting (on error).
